--- a/Styling.css
+++ b/Styling.css
@@ -1,3 +1,7 @@
+:root{
+    --NavButtons:3;     /* Change if I ever need more navbar buttons */
+}
+
 body{
     padding: 0px;
     margin: 0px;
@@ -13,4 +17,22 @@ body{
 
 .Content{
     padding: 20px;
+}
+
+.NavBar{
+    height:5%;
+    border: solid 1px;
+    display:flex;
+
+}
+
+.NavBarButton{
+    height: 100%;
+    display:flex;
+    width: calc(100%/var(--NavButtons));    /* Calculate what % of the width of the screen a button should be*/
+}
+.NavBarButton button{
+    width:100%;
+    border: 0.5px solid;
+    background:white;
 }
