--- a/Styling.css
+++ b/Styling.css
@@ -31,8 +31,14 @@ body{
     display:flex;
     width: calc(100%/var(--NavButtons));    /* Calculate what % of the width of the screen a button should be*/
 }
+
 .NavBarButton button{
     width:100%;
     border: 0.5px solid;
     background:white;
+}
+
+.NavBarButton button:hover{
+    background:rgb(230,230,230);
+    font-weight: bold;
 }
