--- a/Styling.css
+++ b/Styling.css
@@ -34,11 +34,21 @@ body{
 
 .NavBarButton button{
     width:100%;
-    border: 0.5px solid;
+    /* border: 0.5px solid; */
+    border:0px;
     background:white;
 }
 
 .NavBarButton button:hover{
     background:rgb(230,230,230);
     font-weight: bold;
+}
+
+.banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    width:100%;
+    height:10%;
+    border:solid 1.5px darkgray;
 }
