--- a/Styling.css
+++ b/Styling.css
@@ -16,7 +16,10 @@ body{
 }
 
 .Content{
-    padding: 20px;
+    padding-top:20px;
+    padding-left :10%;
+    padding-right: 10%;
+    min-height:80vh;
 }
 
 .NavBar{
@@ -51,4 +54,18 @@ body{
     width:100%;
     height:10%;
     border:solid 1.5px darkgray;
+}
+
+.Footer{
+    display:flex;
+    border-top: 1px darkgray solid;
+    padding-top:20px;
+}
+
+.Footer-Column{
+    width: calc(100%/3);
+    align-items: center;
+    text-align: center;
+    padding:10px;
+    
 }
