--- a/Styling.css
+++ b/Styling.css
@@ -57,9 +57,12 @@ body{
 }
 
 .Footer{
-    display:flex;
     border-top: 1px darkgray solid;
     padding-top:20px;
+}
+.Footer-Column-Container{
+    display:flex;
+
 }
 
 .Footer-Column{
