--- a/Styling.css
+++ b/Styling.css
@@ -56,10 +56,12 @@ h1{
     justify-content: center;
     align-items: center;    
     width:100%;
-    height:10%;
+    height:30vh;
     border:solid 1.5px darkgray;
     font-size: 5vh;
     font-weight:bolder;
+    background-size: cover;
+    background-position: center; 
 }
 
 .Footer{
@@ -68,7 +70,6 @@ h1{
 }
 .Footer-Column-Container{
     display:flex;
-
 }
 
 .Footer-Column{
